# oneapi-cuda

./: .gitignore  README.md
docker/: Dockerfile  oneapi-for-nvidia-gpus-2023.0.0-linux.sh
src/sycl-init/: CMakeLists.txt  Makefile  cmake_install.cmake  simple-sycl-app  simple-sycl-app.cpp
sycl/: CMakeLists.txt
sycl/testcases/: test_init.cpp  util.hpp
